feat: support moving schedule items between days
